# mobilites

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  structure.md  structure.txt
1_collect/: 1_api_voi.py  2_scrap_waryme.py  3_csv_navettes.py  4_duckdb_query.py  4_sql_referentiel.py  5_convert_to_parquet.py  5_sql_zones_iris.py  utils.py
2_agregation/: 6_agregation_et_import.py
data_raw/: waryme_sample.html
scripts_agregation/: 6_agregation_et_import.py  add_iris.py  process_data.py
scripts_collect/: 1_api_voi.py  2_scrap_waryme.py  3_csv_navettes.py  4_sql_referentiel.py  5_convert_to_parquet.py
setup/: create_mock_db.py  json_to_parquet.py
